Version 0.4.5
-------------
Improvement: Added 'Send selected to SABnzbd' buttons on nzbs.org, to send multiple NZBs to SAB in one click.
Bugfix: bandwidth graph wasn't working; thanks to Sajid Anwar for the fix.

Version 0.4.4
-------------
New feature: Added 1-click NZB download for NZBsRus.com

Version 0.4.3
-------------
Bugfix: newzbin.com "Send to SABnzbd" button was broken.
New feature: Added 1-click NZB download for newzleech.com; thanks to johannespfau for the patch.
New feature: Added 1-click NZB download to nzbs.org details page.
Improvement: nzbs.org: Made it clearer that the SAB 1-click icon and the download link are distinct.
Improvement: Removed badge text (# queued items) instead of displaying '0'.

Version 0.4.2
-------------
New feature: double-click the toolbar icon to open SABnzbd.
  Note: Chrome doesn't support this natively.
  The extension tries to detect if you tried to open the popup twice fast enough, and will open SABnzbd if it detects you did.
  You might want to continue clicking on the toolbar icon until a new tab opens, if just double-clicking doesn't work for you.
Bugfix (Issue #1): one-click NZB button was missing from binsearch.net (same as binsearch.info); thanks evertbeurskens for the patch.
Bugfix: "Enable Graph" option couldn't be disabled.

Version 0.4.1
-------------
New feature: Added nzbindex.com 1-click NZB downloads
             Auto-categorization: 1st group that appears in "Group" column on nzbindex.com will be sent as the Category. Make sure to create categories that have names equal to the groups you usually download from (eg. a.b.sounds.mp3.french). Sorry, but there's no way I can use the SABnzbd 'group' field using the API... :\
			Bugfix: SABnzbd icons (used to send a NZB to SABnzbd) changed to 'fetching' (green arrows), but never changed to 'OK' (green logo). Cosmetic bugfix; the actual send operation worked fine.

Version 0.4
-----------